@@ -1,3 +1,4 @@
 name = Course Search
 description = Lets users search through courses and descriptions.
 core = 6.x 
+schema = 2
